# Rust_Project

./: README.md
TryAndBuy/: Cargo.toml
TryAndBuy/src/: main.rs
TryAndBuy/src/controller/: address_handler.rs  admin.rs  auth.rs  buycart_handler.rs  middleware.rs  mod.rs  order_handler.rs  payment_handler.rs  razorpay_capture_payment.rs  razorpay_create_payment.rs  razorpay_fetch_paymentinfo.rs  razorpay_order.rs  razorpay_payment_details_by_orderid.rs  razorpay_refund.rs  return_refund.rs  sales_track.rs  sql_helper.rs  trycart_handler.rs  user_handler.rs
TryAndBuy/src/db_connect/: db.rs
TryAndBuy/src/handler/: mod.rs  trycart_handler.rs  user_handler.rs
TryAndBuy/src/model/: address.rs  buy_cart.rs  login.rs  mod.rs  order.rs  payment.rs  product.rs  refund_return.rs  sales_history.rs  try_cart.rs  user.rs
TryAndBuyUI/: .editorconfig  README.md  angular.json  package-lock.json  package.json
TryAndBuyUI/src/: index.html
TryAndBuyUI/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  window-ref.ts
TryAndBuyUI/src/app/css/: style.css  style.min.css
TryAndBuyUI/src/app/customer/: customer-routing.module.ts  customer.module.ts
TryAndBuyUI/src/app/header/: header.component.css  header.component.html  header.component.ts
TryAndBuyUI/src/app/models/: dataTypes.ts  product.models.ts
TryAndBuyUI/src/app/scss/: style.scss
TryAndBuyUI/src/app/seller/: seller-routing.module.ts
TryAndBuyUI/src/app/services/: address.service.ts  buycart.service.ts  cart.service.ts  customer-signup.service.ts  order.service.ts  payment.service.ts  products.servic.ts  (+2 more)
(+45 files in other folders)
