[package]
name = "TryAndBuy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.7.0"
oauth2 = "4.4.2"
actix-rt = "2.5.0"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres","bigdecimal", "json", "time"] }
tokio = { version = "1", features = ["full"] } # Asynchronous runtime
dotenv = "0.15.0" # To read .env files for environment variables
serde_json ="1.0"
bigdecimal = "0.4.3"
chrono = "0.4.37"
